--- a/index.html
+++ b/index.html
@@ -39,42 +39,42 @@
 
       <section class="cards">
         <div class="cards__card">
-          <img class="cards__image" src="./images/image1.png" alt="image-1" />
+          <img class="cards__image" src="./images/image1.jpeg" alt="image-1" />
           <div class="cards__group">
             <h2 class="cards__title">Minneapolis, MN</h2>
             <div class="cards__like-icon"></div>
           </div>
         </div>
         <div class="cards__card">
-          <img class="cards__image" src="../images/image2.png" alt="image-2" />
+          <img class="cards__image" src="../images/image2.jpeg" alt="image-2" />
           <div class="cards__group">
             <h2 class="cards__title">Hollywood, C.A</h2>
             <div class="cards__like-icon"></div>
           </div>
         </div>
         <div class="cards__card">
-          <img class="cards__image" src="./images/image3.png" alt="image-3" />
+          <img class="cards__image" src="./images/image3.jpeg" alt="image-3" />
           <div class="cards__group">
             <h2 class="cards__title">Golden Gate Bridge</h2>
             <div class="cards__like-icon"></div>
           </div>
         </div>
         <div class="cards__card">
-          <img class="cards__image" src="./images/image4.png" alt="image-4" />
+          <img class="cards__image" src="./images/image4.jpeg" alt="image-4" />
           <div class="cards__group">
             <h2 class="cards__title">Las Vegas</h2>
             <div class="cards__like-icon"></div>
           </div>
         </div>
         <div class="cards__card">
-          <img class="cards__image" src="./images/image5.png" alt="image-5" />
+          <img class="cards__image" src="./images/image5.jpeg" alt="image-5" />
           <div class="cards__group">
             <h2 class="cards__title">Miami</h2>
             <div class="cards__like-icon"></div>
           </div>
         </div>
         <div class="cards__card">
-          <img class="cards__image" src="./images/image6.png" alt="image-6" />
+          <img class="cards__image" src="./images/image6.jpeg" alt="image-6" />
           <div class="cards__group">
             <h2 class="cards__title">New York</h2>
             <div class="cards__like-icon"></div>
