Adição de nova funções, como lixeira para exclusão de cards, popup para adição de novos cards e possibilidade de visualização das imagens em proporções maiores

--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 
       <section class="cards">
         <div class="cards__card">
+          <img
+            class="cards__trash"
+            src="./images/images__button/trash.svg"
+            alt="TÍTULO_DO_LOCAL"
+          />
+          <button class="cards__delete-icon"></button>
+
           <img class="cards__image" src="./images/image1.jpeg" alt="image-1" />
           <div class="cards__group">
             <h2 class="cards__title">Minneapolis, MN</h2>
@@ -46,6 +53,13 @@
           </div>
         </div>
         <div class="cards__card">
+          <img
+            class="cards__trash"
+            src="./images/images__button/trash.svg"
+            alt="TÍTULO_DO_LOCAL"
+          />
+          <button class="cards__delete-icon"></button>
+
           <img class="cards__image" src="../images/image2.jpeg" alt="image-2" />
           <div class="cards__group">
             <h2 class="cards__title">Hollywood, C.A</h2>
@@ -53,6 +67,13 @@
           </div>
         </div>
         <div class="cards__card">
+          <img
+            class="cards__trash"
+            src="./images/images__button/trash.svg"
+            alt="TÍTULO_DO_LOCAL"
+          />
+          <button class="cards__delete-icon"></button>
+
           <img class="cards__image" src="./images/image3.jpeg" alt="image-3" />
           <div class="cards__group">
             <h2 class="cards__title">Golden Gate Bridge</h2>
@@ -60,6 +81,13 @@
           </div>
         </div>
         <div class="cards__card">
+          <img
+            class="cards__trash"
+            src="./images/images__button/trash.svg"
+            alt="TÍTULO_DO_LOCAL"
+          />
+          <button class="cards__delete-icon"></button>
+
           <img class="cards__image" src="./images/image4.jpeg" alt="image-4" />
           <div class="cards__group">
             <h2 class="cards__title">Las Vegas</h2>
@@ -67,6 +95,13 @@
           </div>
         </div>
         <div class="cards__card">
+          <img
+            class="cards__trash"
+            src="./images/images__button/trash.svg"
+            alt="TÍTULO_DO_LOCAL"
+          />
+          <button class="cards__delete-icon"></button>
+
           <img class="cards__image" src="./images/image5.jpeg" alt="image-5" />
           <div class="cards__group">
             <h2 class="cards__title">Miami</h2>
@@ -74,6 +109,13 @@
           </div>
         </div>
         <div class="cards__card">
+          <img
+            class="cards__trash"
+            src="./images/images__button/trash.svg"
+            alt="TÍTULO_DO_LOCAL"
+          />
+          <button class="cards__delete-icon"></button>
+
           <img class="cards__image" src="./images/image6.jpeg" alt="image-6" />
           <div class="cards__group">
             <h2 class="cards__title">New York</h2>
@@ -87,6 +129,9 @@
         >© 2023 Around The U.S. by Vitor Oliveira</span
       >
     </footer>
+
+    -
+
     <section class="popup">
       <form action="#" class="popup__container">
         <h2 class="popup__title">Edit profile</h2>
@@ -104,6 +149,27 @@
         <button class="popup__close" type="button"></button>
       </form>
     </section>
+
+    <section class="popup popup_add">
+      <form action="#" class="popup__container">
+        <h2 class="popup__title">Novo local</h2>
+        <input
+          type="text"
+          class="popup__input popup__input_title"
+          placeholder="Título"
+          required
+        />
+        <input
+          type="url"
+          class="popup__input popup__input_image-link"
+          placeholder="Link de imagem"
+          required
+        />
+        <button class="popup__submit" type="submit">Criar</button>
+        <button class="popup__close" type="button"></button>
+      </form>
+    </section>
+
     <!-- <div class="popup" id="editProfilePopup">
       <div class="popup__content">
         <h2>Editar perfil</h2>
