continuação do projeto

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         />
         <span id="profile-about-error" class="popup__error"></span>
 
-        <button class="popup__submit popup__button_disabled" disabled>
+        <button class="popup__submit popup__submit_disabled" disabled>
           Save
         </button>
         <button class="popup__close" type="button"></button>
@@ -193,7 +193,7 @@
         />
         <span id="location-url-error" class="popup__error"></span>
 
-        <button class="popup__submit popup__button_disabled" disabled>
+        <button class="popup__submit popup__submit_disabled" disabled>
           Create
         </button>
         <button class="popup__close" type="button"></button>
