correção arquivo vendor

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header class="header">
       <img
-        src="images/Vector.png"
+        src="images/Vector.webp"
         alt="Logo with the text Around the US"
         class="header__logo"
       />
@@ -44,7 +44,7 @@
           </div>
           <img
             class="cards__trash"
-            src="./images/images__button/trash.svg"
+            src="./images/images__button/trash.webp"
             alt="Delete"
           />
           <button class="cards__delete-icon"></button>
@@ -58,7 +58,7 @@
           </div>
           <img
             class="cards__trash"
-            src="./images/images__button/trash.svg"
+            src="./images/images__button/trash.webp"
             alt="Delete"
           />
           <button class="cards__delete-icon"></button>
@@ -72,7 +72,7 @@
           </div>
           <img
             class="cards__trash"
-            src="./images/images__button/trash.svg"
+            src="./images/images__button/trash.webp"
             alt="Delete"
           />
           <button class="cards__delete-icon"></button>
@@ -86,7 +86,7 @@
           </div>
           <img
             class="cards__trash"
-            src="./images/images__button/trash.svg"
+            src="./images/images__button/trash.webp"
             alt="Delete"
           />
           <button class="cards__delete-icon"></button>
@@ -100,7 +100,7 @@
           </div>
           <img
             class="cards__trash"
-            src="./images/images__button/trash.svg"
+            src="./images/images__button/trash.webp"
             alt="Delete"
           />
           <button class="cards__delete-icon"></button>
@@ -114,7 +114,7 @@
           </div>
           <img
             class="cards__trash"
-            src="./images/images__button/trash.svg"
+            src="./images/images__button/trash.webp"
             alt="Delete"
           />
           <button class="cards__delete-icon"></button>
