--- a/index.html
+++ b/index.html
@@ -217,7 +217,13 @@
         <button class="popup__close" type="button"></button>
       </form>
     </section>
-
-    <script type="module" src="./script/script.js"></script>
+    <section class="popup popup_type_image">
+      <div class="popup__container_large">
+        <button type="button" class="popup__image_close"></button>
+        <img class="popup__image-large" src="" alt="" />
+        <h2 class="popup__title"></h2>
+      </div>
+    </section>
+    <script type="module" src="./script/index.js"></script>
   </body>
 </html>
