--- a/index.html
+++ b/index.html
@@ -224,6 +224,6 @@
         <h2 class="popup__title"></h2>
       </div>
     </section>
-    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="/script/index.js"></script>
   </body>
 </html>
