--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="cards__card">
-          <img class="cards__image" src="../images/image2.jpeg" alt="image-2" />
+          <img class="cards__image" src="./images/image2.jpeg" alt="image-2" />
           <div class="cards__group">
             <h2 class="cards__title">Hollywood, CA</h2>
             <div class="cards__like-icon"></div>
@@ -224,6 +224,6 @@
         <h2 class="popup__title"></h2>
       </div>
     </section>
-    <script type="module" src="/script/index.js"></script>
+    <script type="module" src="./script/index.js"></script>
   </body>
 </html>
