--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
 
       <section class="cards">
-        <!-- Cartões iniciais mantidos -->
+        <!-- Inicial -->
         <div class="cards__card">
           <img class="cards__image" src="./images/image1.jpeg" alt="image-1" />
           <div class="cards__group">
