--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
       <section class="profile">
         <img class="profile__avatar" src="./images/image.jpg" alt="Profile" />
         <div class="profile__info">
-          <h1 class="profile__name">Jacques Cousteau</h1>
-          <button class="profile__edit-button"></button>
+          <div class="profile__name-wrapper">
+            <h1 class="profile__name">Jacques Cousteau</h1>
+            <button class="profile__edit-button"></button>
+          </div>
           <p class="profile__about">Explorer</p>
         </div>
         <button class="profile__add-button" type="button"></button>
