troca do nome da pasta

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Around The U.S</title>
 
-    <link rel="stylesheet" href="./pages/index.css" />
+    <link rel="stylesheet" href="../pages/index.css" />
     <meta name="author" content="Vitor Oliveira" />
     <meta
       content="Photography. United States. EUA. Trips. Cities"
@@ -16,17 +16,21 @@
   <body>
     <header class="header">
       <img
-        src="images/Vector.webp"
+        src="../images/Vector.webp"
         alt="Logo with the text Around the US"
         class="header__logo"
       />
-      <img src="images/Line.png" alt="Divider line" class="header__line" />
+      <img src="../images/Line.png" alt="Divider line" class="header__line" />
     </header>
 
     <main class="main">
       <section class="profile">
         <div class="profile__avatar-container">
-          <img class="profile__avatar" src="./images/image.jpg" alt="Profile" />
+          <img
+            class="profile__avatar"
+            src="../images/image.jpg"
+            alt="Profile"
+          />
           <div class="profile__avatar-edit-icon"></div>
         </div>
         <div class="profile__info">
@@ -52,7 +56,7 @@
           <button class="cards__like-icon"></button>
         </div>
         <button class="cards__trash">
-          <img src="./images/images__button/trash.svg" alt="Trash icon" />
+          <img src="../images/images__button/trash.svg" alt="Trash icon" />
         </button>
       </div>
     </template>
@@ -171,6 +175,6 @@
         <button class="popup__close" type="button"></button>
       </form>
     </section>
-    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="../script/index.js"></script>
   </body>
 </html>
